# color-art

./: .gitignore  .prettierrc.toml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
docs/: color_generator.md  color_operation.md
rfcs/: 001-Construct Color from Color Space.md
src/: helper.rs  lib.rs  main.rs
src/color/: average.rs  color.rs  color_channel.rs  color_macro.rs  color_macros.rs  darken.rs  from_num.rs  from_space.rs  from_str.rs  mod.rs  saturate.rs  spin.rs  stringify.rs  vec_of.rs
src/color_calc/: blend.rs  contrast_ratio.rs  delta_e.rs  distance.rs  mod.rs
src/color_generator/: average.rs  mix.rs  mod.rs  random.rs
src/color_model/: mod.rs  model.rs
src/color_ops/: darken.rs  fade.rs  mix.rs  mod.rs  negate.rs  saturate.rs  spin.rs
src/color_space/: color_space.rs  from_space.rs  mod.rs  space.rs  valid.rs
src/conversion/: cmyk.rs  hex.rs  hsi.rs  hsl.rs  hsv.rs  hwb.rs  lab.rs  mod.rs  utils.rs  xyz.rs  ycbcr.rs  yiq.rs  yuv.rs
src/data/: alpha_hex_map.rs  chinese_color.rs  mod.rs  w3cx11.rs
src/error/: mod.rs
src/parser/: cmyk.rs  core.rs  hex.rs  hsi.rs  hsl.rs  hsla.rs  hsv.rs  hwb.rs  lab.rs  mod.rs  rgb.rs  rgba.rs  xyz.rs  ycbcr.rs  yuv.rs
src/utils/: blend_fn.rs  hex.rs  math.rs  mod.rs
tests/: color_blend.rs  color_calc.rs  color_channel.rs  color_from_space.rs  color_hex.rs  color_macro.rs  color_macros.rs  color_opts.rs  color_stringify.rs  color_vec_of.rs  serde.rs
