[package]
name = "color-art"
version = "0.1.6"
edition = "2021"
description = "A rust crate for working with colors and color spaces."
license = "MIT"
authors = ["JiatLn"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
rand = "0.8"
lazy_static = "1.4"
