[package]
name = "color-art"
version = "0.3.8"
edition = "2021"
description = "A rust crate for working with colors and color spaces."
license = "MIT"
authors = ["JiatLn <lne128gene980@163.com>"]
repository = "https://github.com/JiatLn/color-art"
homepage = "https://crates.io/crates/color-art"
documentation = "https://docs.rs/color-art"
readme = "README.md"
keywords = ["color", "art", "color-space", "color-art"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde"]
serde = ["dep:serde"]

[dependencies]
rand = "0.8"
lazy_static = "1.4"
thiserror = "1.0.47"
serde = { version = "1.0.193", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1.0.108"
